Bug 152961 - cannot remove album from tree
Summary: cannot remove album from tree
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Database-Trash (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: VHI normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-11-27 00:07 UTC by Mikolaj Machowski
Modified: 2023-04-12 02:43 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mikolaj Machowski 2007-11-27 00:07:46 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources

It is impossible to remove Album from tree on the left side

1) Create new Album - visible in tree and directory created on disk
2) Put there some photos
3) Move Album to trash, everything works OK but...
4) Photos vanish, directory is removed from HD but album stays in tree
Comment 1 caulier.gilles 2007-12-03 13:51:31 UTC
Marcel,

I can always reproduce this problem here. I have search in code where problem exist, but without success...

Where is the code witch update database content ? In AlbumManager we have a KDirWatch witch play with DIO job to handle contents and update PAlbum list, but i cannot find the way where database is updated in live...

Gilles
Comment 2 caulier.gilles 2007-12-03 16:10:38 UTC
Marcel,

The same problem exist when items are sent to trash. The database is not updated and digiKam is restarted, it ask me if items must be removed from database...

Note : if i move items/albums to another place, database is properlly updated. It's sound like a problem with DIO::del() and trash:/ protocol...

This problem is very important and must be fixed before 0.9.3-final.

Gilles
Comment 3 Marcel Wiesweg 2007-12-03 22:49:16 UTC
SVN commit 744580 by mwiesweg:

Properly order parameters passed to ioslave - this effectively disabled all scanning while digikam was running!

BUG: 152961


 M  +3 -1      dio.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=744580
Comment 4 Arnd Baecker 2007-12-03 23:06:56 UTC
What a nice patch for an annoying problem!