Properly order parameters passed to ioslave - this effectively disabled all scanning while digikam was running!

BUG: 152961

svn path=/branches/extragear/kde3/graphics/digikam/; revision=744580