digikam/dio.cpp
@@ -221,9 +221,11 @@ KIO::Job* scan(const KURL& albumURL)
     ds << albumURL;
     ds << QString();
     ds << 0;
+    ds << 0;
+    ds << 0;
+
+    // extra parameter: trigger scan
     ds << 1;
-    ds << 0;
-    ds << 0;
 
     KIO::Job* job = new KIO::TransferJob(albumURL,
                                          KIO::CMD_SPECIAL,
